--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ Temporary Items
 .apdisk
 /IC1_WKSullivan1/nbproject/private/
 /MyStrutsApp/nbproject/private/
+/wksullivan1_MyStrutsApp/nbproject/private/
+/wksullivan1_MyStrutsApp/build/
