--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Temporary Items
 /MyStrutsApp/nbproject/private/
 /wksullivan1_MyStrutsApp/nbproject/private/
 /wksullivan1_MyStrutsApp/build/
+/StrutsExtraPractice/nbproject/private/
