--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Temporary Items
 /wksullivan1_MyStrutsApp/nbproject/private/
 /wksullivan1_MyStrutsApp/build/
 /StrutsExtraPractice/nbproject/private/
+/pa2_wksullivan1/nbproject/private/
