--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ Temporary Items
 /wksullivan1_MyStrutsApp/build/
 /StrutsExtraPractice/nbproject/private/
 /pa2_wksullivan1/nbproject/private/
+/pa2_wksullivan1/build/
+/StrutsExtraPractice/build/
