--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ Temporary Items
 /pa2_wksullivan1/nbproject/private/
 /pa2_wksullivan1/build/
 /StrutsExtraPractice/build/
+/pa2_wksullivan1/dist/
+/pa2_wksullivan1_NoFramework/nbproject/private/
