--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Temporary Items
 /StrutsExtraPractice/build/
 /pa2_wksullivan1/dist/
 /pa2_wksullivan1_NoFramework/nbproject/private/
+/pa2_wksullivan1_NoFramework/build/
