--- a/pa2_wksullivan1_NoFramework/src/java/db.properties
+++ b/pa2_wksullivan1_NoFramework/src/java/db.properties
@@ -1,4 +1,4 @@
-driver=org.apache.derby.jdbc.ClientDriver
-url=jdbc:derby://localhost:1527/myDatabase
-user=mis320
-password=mis320
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/sakila?zeroDateTimeBehavior=convertToNull
+user=root
+password=nbuser
